--- a/guests/secp256k1/Cargo.toml
+++ b/guests/secp256k1/Cargo.toml
@@ -7,5 +7,5 @@ edition = "2021"
 guest = []
 
 [dependencies]
-jolt = { package = "jolt-sdk", git = "https://github.com/a16z/jolt" }
-jolt-inlines-secp256k1 = { git = "https://github.com/a16z/jolt" }
+jolt = { package = "jolt-sdk", git = "https://github.com/a16z/jolt", branch = "wasm-clean" }
+jolt-inlines-secp256k1 = { git = "https://github.com/a16z/jolt", branch = "wasm-clean" }
