--- a/guests/sha3-chain/Cargo.toml
+++ b/guests/sha3-chain/Cargo.toml
@@ -7,5 +7,5 @@ edition = "2021"
 guest = []
 
 [dependencies]
-jolt = { package = "jolt-sdk", git = "https://github.com/a16z/jolt" }
-jolt-inlines-keccak256 = { git = "https://github.com/a16z/jolt" }
+jolt = { package = "jolt-sdk", git = "https://github.com/a16z/jolt", branch = "wasm-clean" }
+jolt-inlines-keccak256 = { git = "https://github.com/a16z/jolt", branch = "wasm-clean" }
