--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,8 +45,8 @@ postcard = { version = "1.1", features = ["use-std"] }
 jolt-core = { git = "https://github.com/a16z/jolt", branch = "wasm-clean", features = ["prover"] }
 tracer = { git = "https://github.com/a16z/jolt", branch = "wasm-clean" }
 common = { git = "https://github.com/a16z/jolt", branch = "wasm-clean", features = ["std"] }
-ark-bn254 = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout" }
-ark-serialize = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout" }
+ark-bn254 = { path = "../arkworks-algebra/curves/bn254" }
+ark-serialize = { path = "../arkworks-algebra/serialize" }
 
 jolt-inlines-sha2 = { git = "https://github.com/a16z/jolt", branch = "wasm-clean", features = ["host"] }
 jolt-inlines-secp256k1 = { git = "https://github.com/a16z/jolt", branch = "wasm-clean", features = ["host"] }
@@ -59,12 +59,22 @@ secp256k1-ecdsa-verify-guest = { path = "guests/secp256k1" }
 sha3-chain-guest = { path = "guests/sha3-chain" }
 
 [patch.crates-io]
-ark-bn254 = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout" }
-ark-ff = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout" }
-ark-ec = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout" }
-ark-serialize = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout" }
+ark-bn254 = { path = "../arkworks-algebra/curves/bn254" }
+ark-ff = { path = "../arkworks-algebra/ff" }
+ark-ec = { path = "../arkworks-algebra/ec" }
+ark-serialize = { path = "../arkworks-algebra/serialize" }
 dory-pcs = { git = "https://github.com/a16z/dory" }
 allocative = { git = "https://github.com/facebookexperimental/allocative", rev = "85b773d85d526d068ce94724ff7a7b81203fc95e" }
+
+[patch.'https://github.com/a16z/arkworks-algebra']
+ark-bn254 = { path = "../arkworks-algebra/curves/bn254" }
+ark-grumpkin = { path = "../arkworks-algebra/curves/grumpkin" }
+ark-secp256k1 = { path = "../arkworks-algebra/curves/secp256k1" }
+ark-ff = { path = "../arkworks-algebra/ff" }
+ark-ec = { path = "../arkworks-algebra/ec" }
+ark-serialize = { path = "../arkworks-algebra/serialize" }
+ark-poly = { path = "../arkworks-algebra/poly" }
+jolt-optimizations = { path = "../arkworks-algebra/jolt-optimizations" }
 
 [profile.release]
 opt-level = 3
